# UAP

./: README.md  backup.py  pyproject.toml
saved_models/FT-Transformer_Pretrained_20251221_225952/: history.json  metadata.json  model.pth
saved_models/MLP_Multilayer_Perceptron_20251221_225201/: history.json  metadata.json  model.pth
saved_models/MLP_Multilayer_Perceptron_20251223_102833/: history.json  label_encoder.pkl  le_city.pkl  le_country.pkl  le_state.pkl  metadata.json  model.pth  scaler.pkl
saved_models/TabNet_Pretrained-inspired_20251221_225609/: history.json  metadata.json  model.pth
src/: app.py
